--- a/CSS/start_page.css
+++ b/CSS/start_page.css
@@ -26,9 +26,9 @@
        height: 70px;
        position: fixed;
        top: 10px;
-       background:linear-gradient(45deg, violet, Orange);
+       /*background:linear-gradient(45deg, violet, Orange);
        opacity:0.8;
-       border-radius: 10%;
+       border-radius: 10%;*/
        z-index: 2;
 
    }
@@ -252,15 +252,10 @@
            top: 10px;
            width: 80%;
            margin: auto;
-           background: #f99a9a;
-           opacity: 0.8;
-           box-shadow: none;
-           border-radius: 10%;
-
        }
 
        #header .logo {
-           margin-right: 45%;
+          
            background-image: url('../images/p_images/half-moon.png');
            background-size: cover;
        }
@@ -311,13 +306,13 @@
    /*pc용*/
    @media all and (min-width:1024px) {
        #wrap {
-           width: 50%;
+           width: 70%;
            min-height: 670px;
-           margin-left: 25%;
+           margin-left: 15%;
        }
 
        #header {
-           width: 50%;
+           width: 60%;
        }
 
        body {
