--- a/CSS/qna.css
+++ b/CSS/qna.css
@@ -1,5 +1,6 @@
-    #wrap{
+    .qna_wrap{
         margin-top: 80px;
+        height: 100vh ;
    }
     #qna {
         width: 100%;
@@ -21,7 +22,7 @@
         width: 70%;
         height: 10px;
         margin: 0 auto;
-        margin-top: 15%;
+        margin-top: 6%;
         background: #fff;
         animation: fade-in 0.3s ease-in-out;
     }
@@ -34,12 +35,13 @@
        
     }
     .box {
-        width: 80%;
+        width: 90%;
         padding: 20px;
         background: #fff;
         margin: 0 auto;
         font-size: 1em;
         border-radius: 20px;
+        animation: fade-in 0.5s;
     }
 
     .q {
@@ -58,16 +60,19 @@
         width: 80%;
         font-size: 1em;
         margin: 0 auto;
+        margin-left: 5%;
     }
 
     .a {
-        margin: 10px 10% 0 10%;
+        text-align: center;
         box-sizing: border-box;
         margin-bottom: 40px;
         font-size: 20px;
         font-size: 1rem;
         font-weight: bolder;
         cursor: pointer;
+        animation: fade-in 0.5s;
+       
     }
 
     .a:hover {
