--- a/CSS/start_page.css
+++ b/CSS/start_page.css
@@ -6,6 +6,7 @@
        overflow: hidden;
        margin-top: 100px;
        border-radius: 2%;
+    min-height: fit-content;
        /*box-shadow: -1px 1px 20px 20px #f9dada;*/
    }
 
